keep working on side panel with additional information

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,17 +18,14 @@
             <div class="drag-and-drop-item" i-name="p" i-addinfo="" i-is-selectable="false" i-is-movable="true" i-type="element">
                 Р
             </div>
-            <div class="drag-and-drop-item" i-name="text" i-addinfo="" i-is-selectable="false" i-is-movable="true" i-type="element">
-                TEXT
+            <div class="drag-and-drop-item" i-name="href" i-addinfo="" i-is-selectable="false" i-is-movable="true" i-type="element">
+                HREF
             </div>
             <div class="drag-and-drop-item" i-name="img" i-addinfo="" i-is-selectable="false" i-is-movable="true" i-type="element">
                 IMG
             </div>
-            <div class="drag-and-drop-item" i-name="href" i-addinfo="" i-is-selectable="false" i-is-movable="true" i-type="element">
-                HREF
-            </div>
-            <div style="display: flex; flex-direction:row; width: 30px;">
-                <button id="debug_button_1" style="padding: 3px;">
+            <div style="display: flex; flex-direction:row;">
+                <button id="debug_button_1" style="padding: 3px; margin-right: 10px;">
                     debug button 1
                 </button>
                 <button id="debug_button_2" style="padding: 3px;">
@@ -37,7 +34,7 @@
             </div>
         </div>
         <div class="side-bars-and-main-field-holder">
-            <div class="slides-panel">
+            <div class="slides-panel" style="display: none;">
     
             </div>
             <div class="pahlava" id="pahlava">
