--- a/index.html
+++ b/index.html
@@ -44,13 +44,32 @@
                 </div>
             </div>
             <div class="context-panel">
-                
+                <div class="context-panel-width" ci-name="width">
+                    <div class="context-panel-width-label">
+                        Ширина
+                    </div>
+                    <div class="context-panel-width-range-and-input-holder">
+                        <input id="panel_width_range" type="range" step="1" min="0" max="100" ci-type="input">
+                        <input id="panel_width_input" ci-type="input"></input>
+                    </div>
+                </div>
+
+                <div class="context-panel-height" ci-name="height">
+                    <div class="context-panel-height-label">
+                        Висота
+                    </div>
+                    <div class="context-panel-height-range-and-input-holder">
+                        <input id="panel_height_range" type="range" step="1" min="0" max="100" ci-type="input">
+                        <input id="panel_height_input" ci-type="input"></input>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
     <script src="./1_config.js" type="application/javascript"></script>
     <script src="./1.2_available_items_and_context_methods.js" type="application/javascript"></script>
+    <script src="./1.3_context_panel_items.js" type="application/javascript"></script>
     <script src="./2_viewport.js" type="application/javascript"></script>
     <script src="./3_items.js" type="application/javascript"></script>
     <script src="./4_app.js" type="application/javascript"></script>  
