added zIndex, transform, etc

--- a/index.html
+++ b/index.html
@@ -73,25 +73,45 @@
                     </div>
                 </div>
 
+                <div class="context-panel-background-linear-gradient" ci-name="zIndex">
+                    <div class="context-panel-background-color-label">
+                        Рівень шару
+                    </div>
+                    <div class="context-panel-row-holder-zIndex">
+                        <button class="zIndex-button" id="zIndex_rise">
+                            В
+                        </button>
+                        <button class="zIndex-button" id="zIndex_rise_to_end">
+                            ВВ
+                        </button>
+                        <button class="zIndex-button" id="zIndex_down">
+                            Н
+                        </button>
+                        <button class="zIndex-button" id="zIndex_down_to_end">
+                            НН
+                        </button>
+                    </div>
+                </div>
+
                 <div class="context-panel-background-linear-gradient" ci-name="anchor">
                     <div class="context-panel-background-color-label">
                         Якір
                     </div>
                     <div class="context-panel-column-holder-100">
                         <div class="context-panel-row-holder">
-                            <button class="anchor-button" id="acnhor_top_left" ca-value="0%,0%">123</button>
-                            <button class="anchor-button" id="acnhor_top_center" ca-value="-50%,0%">123</button>
-                            <button class="anchor-button" id="acnhor_top_right" ca-value="-100%,0%">123</button>
+                            <button class="anchor-button" id="acnhor_top_left" ca-value="0%,0%">11</button>
+                            <button class="anchor-button" id="acnhor_top_center" ca-value="-50%,0%">12</button>
+                            <button class="anchor-button" id="acnhor_top_right" ca-value="-100%,0%">13</button>
                         </div>
                         <div class="context-panel-row-holder">
-                            <button class="anchor-button" id="acnhor_middle_left" ca-value="-50%,0%">123</button>
-                            <button class="anchor-button" id="acnhor_middle_center" ca-value="-50%,-50%">123</button>
-                            <button class="anchor-button" id="acnhor_middle_right" ca-value="-50%,-100%">123</button>
+                            <button class="anchor-button" id="acnhor_middle_left" ca-value="0%,-50%">21</button>
+                            <button class="anchor-button" id="acnhor_middle_center" ca-value="-50%,-50%">22</button>
+                            <button class="anchor-button" id="acnhor_middle_right" ca-value="-100%,-50%">23</button>
                         </div>
                         <div class="context-panel-row-holder">
-                            <button class="anchor-button" id="acnhor_bottom_left" ca-value="-100%,0%">123</button>
-                            <button class="anchor-button" id="acnhor_bottom_center" ca-value="-100%,-50%">123</button>
-                            <button class="anchor-button" id="acnhor_bottom_right" ca-value="-100%,-100%">123</button>
+                            <button class="anchor-button" id="acnhor_bottom_left" ca-value="0%,-100%">31</button>
+                            <button class="anchor-button" id="acnhor_bottom_center" ca-value="-50%,-100%">32</button>
+                            <button class="anchor-button" id="acnhor_bottom_right" ca-value="-100%,-100%">33</button>
                         </div>
                     </div>
                 </div>
