added text field

--- a/index.html
+++ b/index.html
@@ -45,6 +45,349 @@
                 </div>
             </div>
             <div class="context-panel">
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Розміщення
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-half">
+                            <div class="cpf-input-label">
+                                X (%)
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-half">
+                            <div class="cpf-input-label">
+                                Y (%)
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Рівень шару
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <button>В</button>
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <button>ВВ</button>
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <button>Н</button>
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <button>НН</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Якір
+                    </div>
+                    <div class="cpf-inputs-holder w-full add-margin-bot">
+                        <button class="w-tiny" id="acnhor_top_left" ca-value="0%,0%">11</button>
+                        <button class="w-tiny" id="acnhor_top_center" ca-value="-50%,0%">12</button>
+                        <button class="w-tiny" id="acnhor_top_right" ca-value="-100%,0%">13</button>
+
+                        <button class="w-tiny" id="acnhor_middle_left" ca-value="0%,-50%">21</button>
+                        <button class="w-tiny" id="acnhor_middle_center" ca-value="-50%,-50%">22</button>
+                        <button class="w-tiny" id="acnhor_middle_right" ca-value="-100%,-50%">23</button>
+
+                        <button class="w-tiny" id="acnhor_bottom_left" ca-value="0%,-100%">31</button>
+                        <button class="w-tiny" id="acnhor_bottom_center" ca-value="-50%,-100%">32</button>
+                        <button class="w-tiny" id="acnhor_bottom_right" ca-value="-100%,-100%">33</button>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Ширина
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="range">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Висота
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="range">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Прозорість
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="range">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Текст
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-full">
+                            <div id="textEditor" class="context-panel-text-editor">
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Колір тла
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="color">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-middle">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="range">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Градієнт тла
+                    </div>
+                    <div class="cpf-inputs-holder d-column">
+                        <div class="cpf-inputs-holder d-row">
+                            <div class="cpf-inputs-holder d-column w-half">
+                                <div class="cpf-input-block w-full">
+                                    <div class="cpf-input-label">
+                                        Від
+                                    </div>
+                                    <div class="cpf-input-holder">
+                                        <input type="color">
+                                    </div>
+                                </div>
+                                <div class="cpf-input-block w-full">
+                                    <div class="cpf-input-label">
+                                        Прозорість
+                                    </div>
+                                    <div class="cpf-input-holder">
+                                        <input type="range">
+                                    </div>
+                                </div>
+                                <div class="cpf-input-block w-full">
+                                    <div class="cpf-input-label">
+                                        Значення
+                                    </div>
+                                    <div class="cpf-input-holder">
+                                        <input type="range">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="cpf-inputs-holder d-column w-half">
+                                <div class="cpf-input-block w-full">
+                                    <div class="cpf-input-label">
+                                        До
+                                    </div>
+                                    <div class="cpf-input-holder">
+                                        <input type="color">
+                                    </div>
+                                </div>
+                                <div class="cpf-input-block w-full">
+                                    <div class="cpf-input-label">
+                                        Прозорість
+                                    </div>
+                                    <div class="cpf-input-holder">
+                                        <input type="range">
+                                    </div>
+                                </div>
+                                <div class="cpf-input-block w-full">
+                                    <div class="cpf-input-label">
+                                        Значення
+                                    </div>
+                                    <div class="cpf-input-holder">
+                                        <input type="range">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="cpf-inputs-holder w-full">
+                            <div class="cpf-input-block w-wide">
+                                <div class="cpf-input-label">
+                                    Напрямок (градуси)
+                                </div>
+                                <div class="cpf-input-holder">
+                                    <input type="range">
+                                </div>
+                            </div>
+                            <div class="cpf-input-block w-narrow">
+                                <div class="cpf-input-label">
+                                    Зн.
+                                </div>
+                                <div class="cpf-input-holder">
+                                    <input type="text">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Колір граней
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="color">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-middle">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="range">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Товщина граней
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="range">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="cpf-container">
+                    <div class="cpf-container-label">
+                        Округлість блоку
+                    </div>
+                    <div class="cpf-inputs-holder w-full">
+                        <div class="cpf-input-block w-wide">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="range">
+                            </div>
+                        </div>
+                        <div class="cpf-input-block w-narrow">
+                            <div class="cpf-input-label">
+                            </div>
+                            <div class="cpf-input-holder">
+                                <input type="text">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br> <br> <br>    <hr> <hr> <hr>
                 <div class="context-panel-separator">
                     <div class="context-panel-separator-line"></div>
                     <span class="context-panel-separator-text">
@@ -102,13 +445,11 @@
                             <button class="anchor-button" id="acnhor_top_left" ca-value="0%,0%">11</button>
                             <button class="anchor-button" id="acnhor_top_center" ca-value="-50%,0%">12</button>
                             <button class="anchor-button" id="acnhor_top_right" ca-value="-100%,0%">13</button>
-                        </div>
-                        <div class="context-panel-row-holder">
+
                             <button class="anchor-button" id="acnhor_middle_left" ca-value="0%,-50%">21</button>
                             <button class="anchor-button" id="acnhor_middle_center" ca-value="-50%,-50%">22</button>
                             <button class="anchor-button" id="acnhor_middle_right" ca-value="-100%,-50%">23</button>
-                        </div>
-                        <div class="context-panel-row-holder">
+
                             <button class="anchor-button" id="acnhor_bottom_left" ca-value="0%,-100%">31</button>
                             <button class="anchor-button" id="acnhor_bottom_center" ca-value="-50%,-100%">32</button>
                             <button class="anchor-button" id="acnhor_bottom_right" ca-value="-100%,-100%">33</button>
@@ -146,6 +487,18 @@
                     </div>
                 </div>
 
+                <div class="context-panel-separator">
+                    <div class="context-panel-separator-line"></div>
+                    <span class="context-panel-separator-text">
+                        Текст
+                    </span> 
+                    <div class="context-panel-separator-line"></div>   
+                </div>
+                <!-- <div class="context-panel-text-editor-holder" ci-name="textEditor">
+                    <div id="textEditor" class="context-panel-text-editor">
+
+                    </div> 
+                </div>-->
                 <div class="context-panel-separator">
                     <div class="context-panel-separator-line"></div>
                     <span class="context-panel-separator-text">
@@ -257,11 +610,26 @@
         </div>
     </div>
 
+    <script src="ckeditor/ckeditor.js"></script>
+    <script>
+        let editor;
+        InlineEditor
+            .create( document.querySelector( '#textEditor' ), {
+            })
+            .then( newEditor => {
+                editor = newEditor;
+            } )
+            .catch( error => {
+                console.error( error );
+            } );
+    </script>
+
     <script src="./1_config.js" type="application/javascript"></script>
     <script src="./1.2_available_items_and_context_methods.js" type="application/javascript"></script>
     <script src="./1.3_context_panel_items.js" type="application/javascript"></script>
     <script src="./2_viewport.js" type="application/javascript"></script>
     <script src="./3_items.js" type="application/javascript"></script>
     <script src="./4_app.js" type="application/javascript"></script>  
+
 </body>
 </html>
